resolve issue on mobile nav with padding on the popup and the onclick handler being attached to the wrong element.

--- a/src/components/Navbar/NavbarMobile/NavbarMobile.module.scss
+++ b/src/components/Navbar/NavbarMobile/NavbarMobile.module.scss
@@ -59,6 +59,7 @@
     width: 100vw;
     height: 100vh;
     transition: 0.3s ease;
+    padding: 15rem 0rem;
 
     overflow-y: scroll;
 
